--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
     .header__nav--hamburger {
       display: block;
       top: 5%;
-      right: 2.5%; } }
+      right: 5.5%; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .header__nav--hamburger {
       display: block;
@@ -136,7 +136,8 @@ body {
   color: white;
   font-size: 4rem;
   font-weight: 500;
-  line-height: 3.7rem; }
+  line-height: 3.7rem;
+  text-align: center; }
 
 .header__nav--list {
   list-style: none; }
@@ -211,7 +212,9 @@ body {
 .header__nav--list {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 .header__nav {
   margin-left: 3.1%;
@@ -246,7 +249,7 @@ body {
   @media screen and (max-width: 768px) {
     .header__nav--btn-wrap {
       margin-left: auto;
-      margin-right: 6%; } }
+      margin-right: 12%; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .header__nav--btn-wrap {
       margin-left: auto;
@@ -280,19 +283,46 @@ body {
 
 .we-do__text {
   margin-left: 3%;
-  padding-top: 14%; }
+  padding-top: 14%;
+  width: 41%; }
   @media screen and (max-width: 768px) {
     .we-do__text {
       margin-left: 1%;
       padding-top: 0%;
-      width: 55%; } }
+      width: 80%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .we-do__text {
-      width: 73%; } }
+      width: 70%; } }
+
+@media screen and (max-width: 768px) {
+  .we-do__text--title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; } }
 
 .we-do__text--first {
   margin-bottom: 5%;
   display: block; }
+  @media screen and (max-width: 768px) {
+    .we-do__text--first {
+      text-align: center; } }
 
 .breadcrumbs {
   position: fixed;
@@ -791,24 +821,45 @@ body {
 
 .slider__content--left,
 .slider__content--right {
-  position: relative;
-  width: 45%; }
+  position: relative; }
 
-@media screen and (max-width: 768px) {
-  .slider__content--left {
-    width: 60%;
-    margin-bottom: 3%; } }
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .slider__content--left {
-    width: 89%;
-    margin-bottom: -1%; } }
+.slider__content--left {
+  width: 53%; }
+  @media screen and (max-width: 768px) {
+    .slider__content--left {
+      width: 60%;
+      margin-bottom: 3%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__content--left {
+      width: 89%;
+      margin-bottom: -1%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .slider__content--right {
-  margin-left: 6.5%; }
+  margin-left: 6.5%;
+  width: 50%; }
   @media screen and (max-width: 768px) {
     .slider__content--right {
-      width: 80%;
+      width: 75%;
       margin-left: 0; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .slider__content--right {
@@ -833,8 +884,8 @@ body {
 
 .slider__linkblock--left {
   position: absolute;
-  top: 39.5%;
-  left: 14%; }
+  top: 27.5%;
+  left: -2%; }
   @media screen and (max-width: 768px) {
     .slider__linkblock--left {
       top: 49%;
@@ -846,8 +897,8 @@ body {
 
 .slider__linkblock--right {
   position: absolute;
-  top: 39.5%;
-  right: 13.5%; }
+  top: 27.5%;
+  right: -2.5%; }
   @media screen and (max-width: 768px) {
     .slider__linkblock--right {
       top: 49%;
@@ -1005,12 +1056,26 @@ body {
   opacity: 0;
   padding-top: 10%;
   padding-left: 7%; }
+  @media screen and (max-width: 850px) {
+    .reviews__hover {
+      padding-top: 0; } }
   @media screen and (max-width: 768px) {
     .reviews__hover {
       text-align: center; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .reviews__hover {
-      text-align: center; } }
+      text-align: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-left: 0; } }
 
 .reviews__hover--title {
   font-family: Gagalin, Arial, sans-serif;
@@ -1021,11 +1086,17 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.75rem;
-  color: white; }
+  color: white;
+  text-align: center; }
+  @media screen and (max-width: 850px) {
+    .reviews__hover--title {
+      margin-bottom: -5%; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .reviews__hover--title {
       font-size: 1.7rem;
-      line-height: 2rem; } }
+      line-height: 2rem;
+      width: 80%;
+      margin-bottom: 10%; } }
 
 .reviews__hover--text {
   text-decoration: none;
@@ -1038,6 +1109,14 @@ body {
   font-weight: 400;
   line-height: 1.5rem;
   width: 86%; }
+  @media screen and (max-width: 768px) {
+    .reviews__hover--text {
+      line-height: 1rem;
+      width: 90%;
+      margin-bottom: 2%; } }
+  @media screen and (max-width: 570px) {
+    .reviews__hover--text {
+      font-size: 0.675rem; } }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .reviews__hover--text {
       position: absolute;
@@ -1357,7 +1436,7 @@ body {
 .team__block--content {
   margin-left: 4%;
   margin-top: -4%;
-  width: 43%; }
+  min-width: 43%; }
   @media screen and (max-width: 768px) {
     .team__block--content {
       display: -webkit-box;
@@ -1482,6 +1561,12 @@ body {
 .menu__block--open {
   width: 33.75rem;
   overflow: visible; }
+  @media screen and (max-width: 768px) {
+    .menu__block--open {
+      width: 15.75rem; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__block--open {
+      width: 10.75rem; } }
 
 /*.menu__block--close{
     width: 0;
@@ -1498,7 +1583,8 @@ body {
   line-height: 1.5rem;
   width: 29.8rem;
   padding-top: 5%;
-  padding-left: 6%; }
+  padding-left: 6%;
+  width: 95%; }
 
 .menu__btn--bg1 {
   background-size: cover;
@@ -1515,6 +1601,9 @@ body {
   @media screen and (max-width: 768px) {
     .menu__btn--bg1 {
       min-height: 650px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg1 {
+      width: 4rem; } }
 
 .menu__btn--bg2 {
   background-size: cover;
@@ -1531,6 +1620,9 @@ body {
   @media screen and (max-width: 768px) {
     .menu__btn--bg2 {
       min-height: 650px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg2 {
+      width: 4rem; } }
 
 .menu__btn--bg3 {
   background-size: cover;
@@ -1547,6 +1639,9 @@ body {
   @media screen and (max-width: 768px) {
     .menu__btn--bg3 {
       min-height: 650px; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .menu__btn--bg3 {
+      width: 4rem; } }
 
 .order__title {
   font-family: Gagalin, Arial, sans-serif;
