--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -72,7 +72,7 @@ body {
     @include tablet {
         display: block;
         top: 5%;
-    right: 2.5%;
+        right: 5.5%;
     }
     @include phone {
         display: block;
@@ -109,6 +109,7 @@ body {
 
 .we-do__text--second {
     @include fontWhiteLifehack;
+    text-align: center;
 }
 
 .header__nav--list
@@ -116,6 +117,7 @@ body {
  .breadcrumbs__list*/
 
     {
+        
     list-style: none;
 }
 
@@ -198,6 +200,7 @@ body {
 
 .header__nav--list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .header__nav {
@@ -239,7 +242,7 @@ body {
     padding-top: 34px;
     @include tablet {
         margin-left: auto;
-        margin-right: 6%;
+        margin-right: 12%;
     }
 
     @include phone {
@@ -274,19 +277,33 @@ body {
 .we-do__text {
     margin-left: 3%;
     padding-top: 14%;
+    width: 41%;
     @include tablet {
         margin-left: 1%;
         padding-top: 0%;
-        width: 55%;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     @include phone {
-        width: 73%;
+        width: 70%;
     }
 }
-
+.we-do__text--title {
+    @include tablet {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+ 
+}
 .we-do__text--first {
     margin-bottom: 5%;
     display: block;
+    @include tablet {
+    text-align: center;
+    }
 }
 
 .breadcrumbs {
