--- a/SCSS/components/menu.scss
+++ b/SCSS/components/menu.scss
@@ -61,6 +61,12 @@
 .menu__block--open{
     width: 33.75rem;
     overflow: visible;
+    @include tablet {
+       width: 15.75rem;
+    }
+    @include phone {
+        width: 10.75rem;
+    }
 }
 /*.menu__block--close{
     width: 0;
@@ -73,22 +79,32 @@
    width: 29.8rem;
    padding-top: 5%;
    padding-left: 6%;
+   width: 95%;
 }
 .menu__btn--bg1{
     @include backgroundImage;
     background-image: url(../img/ac1.jpg);
     width: 5rem;
     height: 100%;
+    @include phone {
+        width: 4rem;
+    }
 }
 .menu__btn--bg2{
     @include backgroundImage;
     background-image: url(../img/ac2.jpg);
     width: 5rem;
     height: 100%;
+    @include phone {
+        width: 4rem;
+    }
 }
 .menu__btn--bg3{
     @include backgroundImage;
     background-image: url(../img/ac3.jpg);
     width: 5rem;
     height: 100%;
+    @include phone {
+        width: 4rem;
+    }
 }
