--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -45,11 +45,18 @@
     opacity: 0;
     padding-top: 10%;
     padding-left: 7%;
+    @include beetweenFullandTablet{
+        padding-top: 0;
+    }
     @include tablet {
         text-align: center;
      }
      @include phone {
         text-align: center;
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
      }
 }
 
@@ -59,9 +66,15 @@
     font-weight: 400;
     line-height: 1.75rem;
     color: $colorWhite;
+    text-align: center;
+    @include beetweenFullandTablet{
+        margin-bottom: -5%;
+    }
     @include phone {
         font-size: 1.7rem;
         line-height: 2rem;
+        width: 80%;
+        margin-bottom: 10%;
      }
 }
 
@@ -71,6 +84,14 @@
     font-weight: 400;
     line-height: 1.5rem;
     width: 86%;
+    @include tablet {
+        line-height: 1rem;
+        width: 90%;
+        margin-bottom: 2%;
+    }
+    @include beetweenFullandTablet2{
+        font-size: 0.675rem;
+    }
     @include phone {
         @include  visuallyHidden;  
      }
