--- a/SCSS/layout/mixinsandvars.scss
+++ b/SCSS/layout/mixinsandvars.scss
@@ -100,10 +100,21 @@ $colorRed:#e35028;
         @content;
     }
 }
+@mixin beetweenFullandTablet {
+    @media screen  and (max-width:850px) {
+        @content;
+    }
+}
+@mixin beetweenFullandTablet2 {
+    @media screen  and (max-width:570px) {
+        @content;
+    }
+}
 @mixin phone {
     @media screen and (min-width:320px) and (max-width:480px) {
         @content;
     }
 }
+
 
 /*media close*/
