--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -37,7 +37,7 @@ body {
     @include backgroundImage;
     background-color: #111114;
     background-image: url(../img/bg1.jpg);
-    margin-bottom: -3.5%;
+    
     min-height: 100vh;
 }
 
@@ -323,6 +323,12 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 8%;
+    @include tablet {
+        padding-bottom: 4%;
+    }
+    @include phone {
+        padding-bottom: 4%;
+    }
 }
 
 /*Сетки close*/
