--- a/SCSS/components/team.scss
+++ b/SCSS/components/team.scss
@@ -86,6 +86,8 @@ min-height: 100%;
     height: 105px;
     overflow: visible;
    margin-bottom: 6%;
+   transition: height .5s ease-out, margin-bottom .5s ease-out;
+   
    @include tablet {
     
   margin-bottom: 28%;
