--- a/SCSS/components/slider.scss
+++ b/SCSS/components/slider.scss
@@ -212,7 +212,12 @@ margin-left: 4%;
     background-position: center center;
     width: 1rem;
     height: 1.75rem;
-   
+    @include phone {
+        width: 2rem;
+     }
+     @include beetweenphoneandMin {
+        width: 2rem;
+     }
 }
 .slider__link--right{
     display: block;
@@ -221,6 +226,12 @@ margin-left: 4%;
     background-position: center center;
     width: 1rem;
     height: 1.75rem;
+    @include phone {
+        width: 2rem;
+     }
+     @include beetweenphoneandMin {
+        width: 2rem;
+     }
 }
 .slider__linkblock--left {
     position: absolute;
@@ -232,7 +243,7 @@ margin-left: 4%;
      }
      @include phone {
         top: 42.5%;
-    left: 2%;
+        left: 5%;
      }
 }
 .slider__linkblock--right {
@@ -245,7 +256,10 @@ margin-left: 4%;
      }
      @include phone {
         top: 42.5%;
-        right: 2.5%;
+        left: 94%;
+     }
+     @include beetweenphoneandMin {
+        left: 88%;
      }
 }
 
