--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ html {
   @media screen and (min-width: 320px) and (max-width: 480px) {
     html {
       font-size: 14px; } }
+  @media screen and (max-width: 416px) {
+    html {
+      font-size: 11px; } }
 
 body {
   width: 100%;
@@ -35,6 +38,9 @@ body {
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .container {
       min-height: 650px; } }
+  @media screen and (max-width: 331px) {
+    .container {
+      min-width: 0; } }
 
 .we-do {
   background-size: cover;
@@ -106,6 +112,10 @@ body {
       display: block;
       top: 5.5%;
       right: 7.5%; } }
+  @media screen and (max-width: 416px) {
+    .header__nav--hamburger {
+      top: 7%;
+      right: 5.5%; } }
   .header__nav--hamburger::before {
     content: "";
     position: absolute;
@@ -878,6 +888,12 @@ body {
   background-position: center center;
   width: 1rem;
   height: 1.75rem; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__link--left {
+      width: 2rem; } }
+  @media screen and (max-width: 416px) {
+    .slider__link--left {
+      width: 2rem; } }
 
 .slider__link--right {
   display: block;
@@ -886,6 +902,12 @@ body {
   background-position: center center;
   width: 1rem;
   height: 1.75rem; }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .slider__link--right {
+      width: 2rem; } }
+  @media screen and (max-width: 416px) {
+    .slider__link--right {
+      width: 2rem; } }
 
 .slider__linkblock--left {
   position: absolute;
@@ -898,7 +920,7 @@ body {
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .slider__linkblock--left {
       top: 42.5%;
-      left: 2%; } }
+      left: 5%; } }
 
 .slider__linkblock--right {
   position: absolute;
@@ -911,7 +933,10 @@ body {
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .slider__linkblock--right {
       top: 42.5%;
-      right: 2.5%; } }
+      left: 94%; } }
+  @media screen and (max-width: 416px) {
+    .slider__linkblock--right {
+      left: 88%; } }
 
 .slider__popup {
   position: absolute;
