--- a/SCSS/components/menu.scss
+++ b/SCSS/components/menu.scss
@@ -2,7 +2,7 @@
     @include backgroundImage;
     background-color: #111114;
     background-image: url(../img/bg5.jpg);
-    
+    height: 100vh;
     position: relative;
     overflow: hidden;
 }
