--- a/SCSS/components/order.scss
+++ b/SCSS/components/order.scss
@@ -20,7 +20,7 @@
     background-color: $colorBlack;
     background-image: url(../img/bg3.jpg);
     padding-top: 9%;
-    min-height: 100vh;
+    height: 100vh;
 }
 .form__input,
 .form__textaria{
