--- a/SCSS/components/second-section-we-best.scss
+++ b/SCSS/components/second-section-we-best.scss
@@ -2,7 +2,7 @@
 
 .we-best{
     @include backgroundImage;
-    
+    height: 100vh;
     background-color: #f6f0ec;
     background-image: url(../img/bg2.jpg);
     
