--- a/SCSS/components/team.scss
+++ b/SCSS/components/team.scss
@@ -2,7 +2,7 @@
     @include backgroundImage;
     background-color: #111114;
     background-image: url(../img/bg4.jpg);
-    
+    height: 100vh;
     position: relative;
     
 }
