--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/bg1.jpg);
-  min-height: 100vh; }
+  height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .we-do {
       min-height: 650px; } }
@@ -465,6 +465,7 @@ body {
   background-position: center center;
   min-height: 650px;
   width: 100%;
+  height: 100vh;
   background-color: #f6f0ec;
   background-image: url(../img/bg2.jpg); }
   @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -640,8 +641,8 @@ body {
 
 .slider__content--consist {
   position: absolute;
-  top: -7%;
-  left: 0%;
+  top: -12%;
+  left: 8%;
   width: 5.6rem;
   height: 5.6rem;
   background-color: #e35028;
@@ -675,8 +676,8 @@ body {
 
 .slider__content--kkal {
   position: absolute;
-  top: 54%;
-  left: 1%; }
+  top: 91%;
+  left: 8%; }
   @media screen and (max-width: 768px) {
     .slider__content--kkal {
       top: -24%;
@@ -812,7 +813,10 @@ body {
 .slider__content {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   @media screen and (max-width: 768px) {
     .slider__content {
       -webkit-box-orient: vertical;
@@ -911,8 +915,8 @@ body {
 
 .slider__linkblock--left {
   position: absolute;
-  top: 27.5%;
-  right: 98%; }
+  top: 47.5%;
+  right: 97%; }
   @media screen and (max-width: 768px) {
     .slider__linkblock--left {
       top: 49%;
@@ -924,7 +928,7 @@ body {
 
 .slider__linkblock--right {
   position: absolute;
-  top: 27.5%;
+  top: 47.5%;
   left: 97.5%; }
   @media screen and (max-width: 768px) {
     .slider__linkblock--right {
@@ -941,8 +945,8 @@ body {
 .slider__popup {
   position: absolute;
   display: none;
-  top: -2.8rem;
-  left: 5.6rem;
+  top: -2.4rem;
+  left: 7.8rem;
   width: 16.8rem;
   min-height: 20.75rem;
   background-color: rgba(255, 255, 255, 0.9);
@@ -1040,7 +1044,7 @@ body {
       right: 5%; } }
 
 .reviews {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   min-height: 650px; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1236,6 +1240,7 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/bg4.jpg);
+  height: 100vh;
   position: relative; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .team {
@@ -1524,6 +1529,7 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/bg5.jpg);
+  height: 100vh;
   position: relative;
   overflow: hidden; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1730,7 +1736,7 @@ body {
   background-color: #2f3234;
   background-image: url(../img/bg3.jpg);
   padding-top: 9%;
-  min-height: 100vh; }
+  height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .order {
       min-height: 650px; } }
@@ -1958,7 +1964,8 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/map.jpg);
-  position: relative; }
+  position: relative;
+  height: 100vh; }
   @media screen and (min-width: 320px) and (max-width: 480px) {
     .map {
       min-height: 650px; } }
