--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width: 100%;
     min-height: 650px;
+    
     @include phone {
         
         height: 100vh;
@@ -161,3 +162,75 @@
     }
 }
 
+//overlay
+.reviews__popup{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(47, 50, 52);
+    opacity: 0.7;
+    display: block;
+    z-index: 60;
+    margin: 0;
+    @include tablet {
+        display: none;
+    }
+    @include phone {
+        display: none;
+    }
+    
+}
+.reviews__popup--open{
+    display: block;
+}
+.reviews__popup__cont{
+    position: absolute;
+    top: 58%;
+    left: 34%;
+    width: 28.81rem;
+    height: 15.9375rem;
+    border-radius: 5px;
+    background-color: $colorWhite;
+    opacity: 1;
+    margin: 0;
+    padding: 0;
+    padding-top: 2%;
+    padding-left: 1%;
+    box-sizing: border-box;
+}
+.cont__title{
+    @include fontOrangeGagalin;
+    color: $colorBlack;
+    font-size: 0.875rem;
+    line-height: 1.75rem;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 3%;
+}
+.cont__text{
+    @include fontUbuntu;
+       
+        color: $colorBlack;
+        font-size: 0.875rem;
+        line-height: 1.5rem;
+        margin: 0;
+        padding: 0;
+}
+
+.cont__btn{
+    position: absolute;
+    top: 4.35%;
+    right: 4%;
+    width: 20px;
+    height: 20px;
+    font-size: 0;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    box-sizing: border-box;
+    background-image: url(../img/btnsliderclose.png);
+    background-repeat: no-repeat;
+    outline: none;
+}
