--- a/css/style.css
+++ b/css/style.css
@@ -1232,6 +1232,85 @@ body {
     .btn-text2 {
       display: block; } }
 
+.reviews__popup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2f3234;
+  opacity: 0.7;
+  display: block;
+  z-index: 60;
+  margin: 0; }
+  @media screen and (max-width: 768px) {
+    .reviews__popup {
+      display: none; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .reviews__popup {
+      display: none; } }
+
+.reviews__popup--open {
+  display: block; }
+
+.reviews__popup__cont {
+  position: absolute;
+  top: 58%;
+  left: 34%;
+  width: 28.81rem;
+  height: 15.9375rem;
+  border-radius: 5px;
+  background-color: white;
+  opacity: 1;
+  margin: 0;
+  padding: 0;
+  padding-top: 2%;
+  padding-left: 1%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.cont__title {
+  font-family: Gagalin, Arial, sans-serif;
+  color: #f9b43b;
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 5.3rem;
+  color: #2f3234;
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 3%; }
+
+.cont__text {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  color: #2f3234;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0; }
+
+.cont__btn {
+  position: absolute;
+  top: 4.35%;
+  right: 4%;
+  width: 20px;
+  height: 20px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-image: url(../img/btnsliderclose.png);
+  background-repeat: no-repeat;
+  outline: none; }
+
 .team {
   background-size: cover;
   background-repeat: no-repeat;
