--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -171,7 +171,7 @@
     height: 100%;
     background-color: rgb(47, 50, 52);
     opacity: 0.7;
-    display: block;
+    display: none;
     z-index: 60;
     margin: 0;
     @include tablet {
