--- a/css/style.css
+++ b/css/style.css
@@ -1240,7 +1240,7 @@ body {
   height: 100%;
   background-color: #2f3234;
   opacity: 0.7;
-  display: block;
+  display: none;
   z-index: 60;
   margin: 0; }
   @media screen and (max-width: 768px) {
