--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -169,8 +169,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(47, 50, 52);
-    opacity: 0.7;
+    background-color: rgba(47, 50, 52,0.7);
+    
     display: none;
     z-index: 60;
     margin: 0;
