--- a/css/style.css
+++ b/css/style.css
@@ -1238,8 +1238,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #2f3234;
-  opacity: 0.7;
+  background-color: rgba(47, 50, 52, 0.7);
   display: none;
   z-index: 60;
   margin: 0; }
