--- a/SCSS/components/order.scss
+++ b/SCSS/components/order.scss
@@ -167,3 +167,64 @@ cursor: pointer;
     justify-content: center;
     }
 }
+
+//popup order
+.order__popup{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(47, 50, 52,0.7);
+    
+    display: none;
+    z-index: 60;
+    margin: 0;
+    @include tablet {
+        display: none;
+    }
+    @include phone {
+        display: none;
+    }
+    
+}
+
+.order__popup--open{
+    display: block;
+}
+.order__popup__cont{
+    position: absolute;
+    top: 81%;
+    left: 43%;
+    width: 12.5rem;
+    height: 6.6875rem;
+    border-radius: 5px;
+    background-color: $colorWhite;
+    opacity: 1;
+    margin: 0;
+    padding: 0;
+    padding-top: 1%;
+    padding-left: 1.5%;
+    box-sizing: border-box;
+}
+.order__cont--title{
+    @include  fontUbuntu ;
+    text-align: center;
+    color: $colorBlack;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    margin: 0;
+    padding: 0;
+}
+.order__cont--btn{
+    @include btn;
+    @include   fontUbuntu ;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-left: 21%;
+    margin-top: 7%;
+}
