--- a/SCSS/components/team.scss
+++ b/SCSS/components/team.scss
@@ -86,7 +86,7 @@ min-height: 100%;
     height: 105px;
     overflow: visible;
    margin-bottom: 6%;
-   transition: height .5s ease-out, margin-bottom .5s ease-out;
+   //transition: height .5s ease-out, margin-bottom .5s ease-out;
    
    @include tablet {
     
@@ -98,6 +98,7 @@ min-height: 100%;
 }
 }
 
+
 .team__member{
     background-color: transparent;
     border: none;
@@ -108,7 +109,7 @@ min-height: 100%;
     line-height: 1.75rem;
     color: $colorWhite; 
     position: relative;
-
+    
 &::before{
     content: "";
     cursor: pointer;
@@ -120,6 +121,7 @@ min-height: 100%;
     border-top: 8px solid #f9b43b;
     border-left: 5.5px solid transparent;
     border-right: 5.5px solid transparent;
+  
 }
 @include phone {
     font-size: 1.5rem;
@@ -130,9 +132,21 @@ min-height: 100%;
    line-height: 1.8rem; 
  }
 }
+
+.team__member.team__member--active::before {
+   
+    transform: rotate(180deg);
+    transition: transform .5s ease-out;
+    
+    
+}
 .team__member--yellow{
 color: #f9b43b;
 }
+.team__block{
+    transition: height .5s ease-out, margin-bottom .5s ease-out;
+}
+
 .team__block--image{
     border-radius: 50%;
     width: 6.37rem;
