--- a/css/style.css
+++ b/css/style.css
@@ -1430,10 +1430,7 @@ body {
 .team__member.team__member--active + .team__block--open {
   height: 105px;
   overflow: visible;
-  margin-bottom: 6%;
-  -webkit-transition: height .5s ease-out, margin-bottom .5s ease-out;
-  -o-transition: height .5s ease-out, margin-bottom .5s ease-out;
-  transition: height .5s ease-out, margin-bottom .5s ease-out; }
+  margin-bottom: 6%; }
   @media screen and (max-width: 768px) {
     .team__member.team__member--active + .team__block--open {
       margin-bottom: 28%; } }
@@ -1475,8 +1472,23 @@ body {
       font-size: 1.5rem;
       line-height: 1.8rem; } }
 
+.team__member.team__member--active::before {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  -webkit-transition: -webkit-transform .5s ease-out;
+  transition: -webkit-transform .5s ease-out;
+  -o-transition: transform .5s ease-out;
+  transition: transform .5s ease-out;
+  transition: transform .5s ease-out, -webkit-transform .5s ease-out; }
+
 .team__member--yellow {
   color: #f9b43b; }
+
+.team__block {
+  -webkit-transition: height .5s ease-out, margin-bottom .5s ease-out;
+  -o-transition: height .5s ease-out, margin-bottom .5s ease-out;
+  transition: height .5s ease-out, margin-bottom .5s ease-out; }
 
 .team__block--image {
   border-radius: 50%;
@@ -2007,6 +2019,84 @@ body {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center; } }
+
+.order__popup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(47, 50, 52, 0.7);
+  display: none;
+  z-index: 60;
+  margin: 0; }
+  @media screen and (max-width: 768px) {
+    .order__popup {
+      display: none; } }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .order__popup {
+      display: none; } }
+
+.order__popup--open {
+  display: block; }
+
+.order__popup__cont {
+  position: absolute;
+  top: 81%;
+  left: 43%;
+  width: 12.5rem;
+  height: 6.6875rem;
+  border-radius: 5px;
+  background-color: white;
+  opacity: 1;
+  margin: 0;
+  padding: 0;
+  padding-top: 1%;
+  padding-left: 1.5%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.order__cont--title {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  text-align: center;
+  color: #2f3234;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 0; }
+
+.order__cont--btn {
+  background-color: #e35028;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-left: 21%;
+  margin-top: 7%; }
+  .order__cont--btn:hover {
+    background-color: #c1401e; }
 
 .video {
   background-size: cover;
