--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -44,7 +44,7 @@ body {
     background-color: #111114;
     background-image: url(../img/bg1.jpg);
     
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .header__nav--link {
