--- a/css/style.css
+++ b/css/style.css
@@ -1057,7 +1057,8 @@ body {
   overflow: hidden;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  will-change: right; }
 
 .reviews {
   height: 100vh;
