--- a/css/style.css
+++ b/css/style.css
@@ -816,7 +816,9 @@ body {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  min-width: 100%;
+  position: absolute; }
   @media screen and (max-width: 768px) {
     .slider__content {
       -webkit-box-orient: vertical;
@@ -1058,7 +1060,8 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  will-change: right; }
+  will-change: right;
+  width: 100%; }
 
 .reviews {
   height: 100vh;
