--- a/css/style.css
+++ b/css/style.css
@@ -814,11 +814,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   min-width: 100%;
-  position: absolute; }
+  position: absolute;
+  top: 0;
+  left: 0; }
   @media screen and (max-width: 768px) {
     .slider__content {
       -webkit-box-orient: vertical;
