--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -67,7 +67,7 @@
     font-weight: 400;
     line-height: 1.75rem;
     color: $colorWhite;
-    text-align: center;
+   //text-align: center;
     @include beetweenFullandTablet{
         margin-bottom: -5%;
     }
