--- a/css/style.css
+++ b/css/style.css
@@ -1144,8 +1144,7 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.75rem;
-  color: white;
-  text-align: center; }
+  color: white; }
   @media screen and (max-width: 850px) {
     .reviews__hover--title {
       margin-bottom: -5%; } }
