--- a/css/style.css
+++ b/css/style.css
@@ -1055,6 +1055,7 @@ body {
   overflow: hidden; }
 
 .slider__list {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
